--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.3.0'
+    implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
+    implementation group: 'com.squareup.retrofit2', name: 'adapter-rxjava', version: '2.3.0'
+
 }
