--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,8 @@ dependencies {
     implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.3.0'
     implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.3.0'
     implementation group: 'com.squareup.retrofit2', name: 'adapter-rxjava', version: '2.3.0'
-
+    implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.8.0'
+    annotationProcessor(group: 'com.github.bumptech.glide', name: 'compiler', version: '4.8.0')
+    implementation "com.android.support:support-annotations:28.0.0"
+    annotationProcessor "com.android.support:support-annotations:28.0.0"
 }
