--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.8.0'
     annotationProcessor(group: 'com.github.bumptech.glide', name: 'compiler', version: '4.8.0')
     implementation "com.android.support:support-annotations:28.0.0"
+    implementation'androidx.recyclerview:recyclerview:1.1.0'
+
     annotationProcessor "com.android.support:support-annotations:28.0.0"
 }
