添加Volley 添加DialogFragment的练习

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     annotationProcessor(group: 'com.github.bumptech.glide', name: 'compiler', version: '4.8.0')
     implementation "com.android.support:support-annotations:28.0.0"
     implementation'androidx.recyclerview:recyclerview:1.1.0'
-
+    //implementation 'me.jessyan:autosize:1.0.0'
     annotationProcessor "com.android.support:support-annotations:28.0.0"
+    implementation group: 'com.android.volley', name: 'volley', version: '1.1.1'
 }
