--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,8 @@ dependencies {
     //implementation 'me.jessyan:autosize:1.0.0'
     annotationProcessor "com.android.support:support-annotations:28.0.0"
     implementation group: 'com.android.volley', name: 'volley', version: '1.1.1'
+    // leakcanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
 }
