--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity android:name=".Adapt2Activity" />
         <activity
-            android:name=".DialogActivity"
+            android:name=".jetpack.JetpackActivity"
             android:launchMode="standard">
             <intent-filter>
 
