--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        dataBinding {
+            enabled  true
+        }
     }
 
     buildTypes {
@@ -28,6 +31,7 @@ android {
         targetGenDir 'src/main/java'
 
     }
+
 }
 
 dependencies {
@@ -41,7 +45,7 @@ dependencies {
     implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.8.0'
     annotationProcessor(group: 'com.github.bumptech.glide', name: 'compiler', version: '4.8.0')
     implementation "com.android.support:support-annotations:28.0.0"
-    implementation'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //implementation 'me.jessyan:autosize:1.0.0'
     annotationProcessor "com.android.support:support-annotations:28.0.0"
     implementation group: 'com.android.volley', name: 'volley', version: '1.1.1'
@@ -49,4 +53,6 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+    // workmanager
+    implementation "android.arch.work:work-runtime:1.0.0"
 }
