--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        dataBinding{
+            enabled=true
+        }
     }
 
     buildTypes {
@@ -46,4 +49,10 @@ dependencies {
     annotationProcessor "com.android.support:support-annotations:28.0.0"
     implementation group: 'com.android.volley', name: 'volley', version: '1.1.1'
     implementation "android.arch.lifecycle:extensions:1.1.1"
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+    implementation 'androidx.databinding:databinding-adapters:3.6.3'
+    implementation 'androidx.databinding:databinding-runtime:3.6.3'
+    implementation "android.arch.work:work-runtime:1.0.1"
 }
